openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baklava-ai
  labels:
    app: baklava-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baklava-ai
  template:
    metadata:
      labels:
        app: baklava-ai
    spec:
      containers:
        - name: baklava-ai
          image: docker.io/mustdo12/baklava-ai:1905261618
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: baklava-ai-data
