openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: baklava-ai
  labels:
    app: baklava-ai
spec:
  host: baklava-ai-kuyruk.apps-crc.testing
  to:
    kind: Service
    name: baklava-ai
  port:
    targetPort: 8080
  tls:
    termination: edge
